<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.gamesettings.GameSettingsActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cell_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_cell_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_cell_size_hint"
            android:inputType="number"
            android:text="10" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_activated_cells"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_cell_size">

        <EditText
            android:id="@+id/input_activated_cells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_random_activation_count"
            android:inputType="number"
            android:text="1000" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_evolving_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_activated_cells">

        <EditText
            android:id="@+id/input_evolving_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_evolve_time_hint"
            android:inputType="number"
            android:text="50" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_rules_to_survive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/input_layout_rules_to_be_reborn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_evolving_time">

        <EditText
            android:id="@+id/input_rules_to_survive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_rules_to_survive_hint"
            android:inputType="number"
            android:text="23" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_rules_to_be_reborn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_layout_rules_to_survive"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_evolving_time">

        <EditText
            android:id="@+id/input_rules_to_be_reborn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_rules_to_be_reborn_hint"
            android:inputType="number"
            android:text="3" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="StartSimulation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_rules_to_be_reborn" />

    <CheckBox
        android:id="@+id/sandbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Sandbox"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button" />
</android.support.constraint.ConstraintLayout>